[SPR-66] feat: ResponseDto Builder 패턴으로 변경